# NER-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt  solutiont.ipynb
configs/: config.yaml
scripts/: data_utils.py  eval.py  model.py
