[project]
name = "ner-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.20.0",
    "bertviz>=0.1.2",
    "corus>=0.10.0",
    "datasets>=2.12.0",
    "lightning>=2.0.0",
    "matplotlib>=3.7.1",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "phik>=0.12.5",
    "protobuf>=3.20.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.1.99",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]
